recentlyused: override access time date with Backend value

When access time is the same as creation time or modification time.
That probably means the user is using noatime.

BUG: 437382